2007-02-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: dbd/mysql.scm, dbd_mysqllib.stub, dbd_mysql.h
	  Add support of MY_CHARSET_INFO structure and
	  mysql_get_character_set_info.

	* Change: dbd/mysql.scm, dbd_mysqllib.stub, dbd_mysql.c, dbd_mysql.h
	  Add support of MYSQL_FIELD structure handling and
	  mysql-fetch-field-direct.  But working in progress.

2007-02-23  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: dbd/mysql.scm
	  Rewrite with native prepared statement API.
	  Working in progress.

2007-02-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: dbd_mysql.c, dbd_mysql.h, dbd_mysqllib.stub
	  Add support of native prepared statement.

2007-02-16  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: dbd/mysql.scm, dbd_mysql.c
	  Add to <mysql-error> slot "sql-code" that holds SQL state.

	* Change: dbd/mysql.scm
	  So now dbi-execute-using-connection fits behavior
	  of mysql-store-result.

	* Change: dbd_mysqllib.stub
	  Now mysql-store-result return <mysql-res> instance after
	  mysql-real-query "SELECT type" query, and #f after
	  mysql-real-query "Other type" query(INSERT/UPDATE and so on),
	  and raise <mysql-error> if any error occurred.

2007-02-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: dbd/mysql.scm
	  Export <mysql-error> and <mysql-stmt-error>.

	* Change: dbd_mysqllib.stub
	  Now mysql-real-query return #<undef> and raise <mysql-error>
	  if error occurred.

	* Change: test/dbi.scm, test/dbd.scm
	  Now test.scm is splitted into test/dbi.scm(via DBI test) and
	  test/dbd.scm(low level test/not implemented yet).

	* Fix: dbd_mysqllib.stub
	  Use SCM_STRING_BODY* API instead of Scm_GetStringConst and SCM_STRING_SIZE.

2007-01-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: Makefile.in
	  Delete VERSION and DIST_EXCLUDE_X only when invoke make maintainer-clean.

2007-01-16  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: Makefile.in
	  Add datarootdir definition.

2006-03-20  ENDO Yasuyuki <yasuyuki@javaopen.org>

	* release 0.2.2
