@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003-2007 Scheme Arts, L.L.C., All rights reserved.
 ;;  Copyright (c) 2003-2007 Time Intermedia Corporation, All rights reserved.
 ;;
-;; $Id: dbd.scm,v 1.17 2007/02/27 07:42:56 bizenn Exp $
+;; $Id: dbd.scm,v 1.18 2007/02/28 07:11:06 bizenn Exp $
 
 (use gauche.test)
 (use gauche.collection)
@@ -21,6 +21,7 @@
 (define *result* #f)
 (define *stmt* #f)
 
+(test-section "Connection")
 (test* "mysql-real-connect/fail" <mysql-error>
        (guard (e (else (class-of e)))
 	 (mysql-real-connect #f "" "" "nonexistent" 0 #f 0)))
@@ -28,9 +29,10 @@
        (let1 c (mysql-real-connect #f #f #f *db* 0 #f 0)
 	 (set! *mysql* c)
 	 (class-of c)))
+
+(test-section "Character set handling")
 (test* "mysql-character-set-name" "utf8"
        (mysql-character-set-name *mysql*) string=?)
-
 (let1 charset (mysql-get-character-set-info *mysql*)
   (test* "mysql-get-character-set-info: <mysql-charset>" <mysql-charset> (class-of charset))
   (for-each (lambda (args)
@@ -46,19 +48,17 @@
 	      (dir ,equal? #f)
 	      (mbminlen ,= 1)
 	      (mbmaxlen ,= 3))))
-
 (test* "mysql-real-escape-string" "\\0a\\rb\\nc\\\\d\\'e\\\"f\\Z"
        (mysql-real-escape-string *mysql* "\0a\rb\nc\\d'e\"f\x1a"))
 
+(test-section "Issue MySQL statement(not prepared)")
 (test* "mysql-real-query/create table" (undefined)
        (mysql-real-query *mysql* "CREATE TABLE DBD_TEST (id integer, data varchar(255), constraint primary key(id))"))
-
 (dotimes (i 10)
   (test* #`"mysql-real-query/insert record #,|i|" (undefined)
 	 (mysql-real-query *mysql* #`"INSERT INTO DBD_TEST (id, data) values (,|i|,, 'DATA,|i|')"))
   (test* "mysql-affected-rows/insert one record" 1 (mysql-affected-rows *mysql*)))
 (test* "mysql-store-result/insert" #f (mysql-store-result *mysql*))
-
 (test* "mysql-real-query/select all" (undefined)
        (mysql-real-query *mysql* "SELECT id, data FROM DBD_TEST order by id"))
 (test* "mysql-store-result/select" <mysql-res>
@@ -99,12 +99,11 @@
 	      (charset-number ,= 63 33)
 	      (type ,= ,MYSQL_TYPE_LONG ,MYSQL_TYPE_VAR_STRING)
 	      )))
-
 (test* "mysql-free-result" (undefined) (mysql-free-result *result*))
 (test* "mysql-res-closed?/after close" #t (mysql-res-closed? *result*))
-
 (test* "mysql-real-query/drop table" (undefined) (mysql-real-query *mysql* "DROP TABLE DBD_TEST"))
 
+(test-section "Issue MySQL Prepared Statement")
 (test* "mysql-stmt-prepare/create table" <mysql-stmt>
        (let1 s (mysql-stmt-prepare *mysql* "
                   CREATE TABLE DBD_TEST (
@@ -121,7 +120,6 @@
 (test* "mysql-stmt-closed?/before close" #f (mysql-stmt-closed? *stmt*))
 (test* "mysql-stmt-close/create table" (undefined) (mysql-stmt-close *stmt*))
 (test* "mysql-stmt-closed?/after close" #t (mysql-stmt-closed? *stmt*))
-
 (let1 stmt (mysql-stmt-prepare *mysql* "INSERT INTO DBD_TEST (id, name, data) values (?, ?, ?)")
   (test* "mysql-stmt-param-count/insert" 3 (mysql-stmt-param-count stmt) =)
   (test* "mysql-stmt-field-count/insert" 0 (mysql-stmt-field-count stmt) =)
@@ -130,7 +128,6 @@
 	   (mysql-stmt-execute stmt i #`"DATA,|i|" "This is test data."))
     (test* "mysql-stmt-affected-rows" 1 (mysql-stmt-affected-rows stmt) =))
   (mysql-stmt-close stmt))
-
 (let1 stmt (mysql-stmt-prepare *mysql* "SELECT id, name, data FROM DBD_TEST where ID in (?,?,?,?)")
   (test* "mysql-stmt-param-count/select" 4 (mysql-stmt-param-count stmt) =)
   (test* "mysql-stmt-field-count/select" 3 (mysql-stmt-field-count stmt) =)
@@ -143,14 +140,12 @@
 	      #(9 "DATA9" "This is test data.")
 	      #f))
   (mysql-stmt-close stmt))
-
 (let1 stmt (mysql-stmt-prepare *mysql* "UPDATE DBD_TEST set data=? where ID between ? and ?")
   (test* "mysql-stmt-param-count/update" 3 (mysql-stmt-param-count stmt) =)
   (test* "mysql-stmt-field-count/update" 0 (mysql-stmt-field-count stmt) =)
   (test* "mysql-stmt-execute/update" (undefined) (mysql-stmt-execute stmt #f 5 7))
   (test* "mysql-stmt-affected-rows/update" 3 (mysql-stmt-affected-rows stmt) =)
   (mysql-stmt-close stmt))
-
 (let1 stmt (mysql-stmt-prepare *mysql* "SELECT DATA, count(*) from DBD_TEST where DATA is NULL group by DATA")
   (test* "mysql-stmt-param-count/select" 0 (mysql-stmt-param-count stmt) =)
   (test* "mysql-stmt-field-count/select" 2 (mysql-stmt-field-count stmt) =)
@@ -158,18 +153,15 @@
   (test* "mysql-stmt-affected-rows/select" 1 (mysql-stmt-affected-rows stmt) =)
   (test* "mysql-stmt-fetch/select" '#(#f 3) (mysql-stmt-fetch stmt) equal?)
   (mysql-stmt-close stmt))
-
 (let1 stmt (mysql-stmt-prepare *mysql* "UPDATE DBD_TEST set data = ? where ID = ?")
   (test* "mysql-stmt-fetch-field-names/update" '#() (mysql-stmt-fetch-field-names stmt) equal?)
   (test* "mysql-stmt-execute/update with Japanese data" (undefined) (mysql-stmt-execute stmt "テストデータ" 1))
   (mysql-stmt-close stmt))
-
 (let1 stmt (mysql-stmt-prepare *mysql* "SELECT DATA from DBD_TEST where ID = 1")
   (test* "mysql-stmt-fetch-field-names/select" '#("DATA") (mysql-stmt-fetch-field-names stmt) equal?)
   (mysql-stmt-execute stmt)
   (test* "mysql-stmt-fetch/select of Japanese data" #("テストデータ") (mysql-stmt-fetch stmt) equal?)
   (mysql-stmt-close stmt))
-
 (let1 stmt (mysql-stmt-prepare *mysql* "SELECT ID, NAME from DBD_TEST order by ID")
   (test* "mysql-stmt-fetch-field-names/select" '#("ID" "NAME") (mysql-stmt-fetch-field-names stmt) equal?)
   (mysql-stmt-execute stmt)
@@ -183,11 +175,11 @@
   (test* "mysql-stmt-data-seek/overflow" (undefined) (mysql-stmt-data-seek stmt 15))
   (test* "mysql-stmt-fetch/eor" #f (mysql-stmt-fetch stmt))
   (mysql-stmt-close stmt))
-
 (let1 stmt (mysql-stmt-prepare *mysql* "DROP TABLE DBD_TEST")
   (mysql-stmt-execute stmt)
   (mysql-stmt-close stmt))
 
+(test-section "Disconnection")
 (test* "mysql-handle-closed?/before close" #f (mysql-handle-closed? *mysql*))
 (test* "mysql-close" (undefined) (mysql-close *mysql*))
 (test* "mysql-handle-closed?/after close" #t (mysql-handle-closed? *mysql*))
